--- a/02-Movie-reviews.ipynb
+++ b/02-Movie-reviews.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,6 +9,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -15,6 +17,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -23,9 +26,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import string\n",
+    "string.punctuation\n",
+    "from sklearn.model_selection import cross_validate\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.feature_extraction.text import CountVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target</th>\n",
+       "      <th>reviews</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>neg</td>\n",
+       "      <td>plot : two teen couples go to a church party ,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>neg</td>\n",
+       "      <td>the happy bastard's quick movie review \\ndamn ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>neg</td>\n",
+       "      <td>it is movies like these that make a jaded movi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>neg</td>\n",
+       "      <td>\" quest for camelot \" is warner bros . ' firs...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>neg</td>\n",
+       "      <td>synopsis : a mentally unstable man undergoing ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  target                                            reviews\n",
+       "0    neg  plot : two teen couples go to a church party ,...\n",
+       "1    neg  the happy bastard's quick movie review \\ndamn ...\n",
+       "2    neg  it is movies like these that make a jaded movi...\n",
+       "3    neg   \" quest for camelot \" is warner bros . ' firs...\n",
+       "4    neg  synopsis : a mentally unstable man undergoing ..."
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -35,14 +121,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2000, 2)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data.shape"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -50,6 +148,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -68,29 +167,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import string\n",
     "from nltk import word_tokenize\n",
-    "from nltk.stem import WordNetLemmatizer\n",
-    "\n",
-    "def preprocessing(sentence):\n",
-    "    pass  # YOUR CODE HERE\n"
+    "from nltk.stem import WordNetLemmatizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Clean reviews\n",
-    "pass  # YOUR CODE HERE"
+    "def preprocessing(text):\n",
+    "    # Lowercase characters\n",
+    "    text = text.lower()\n",
+    "    # Remove numbers\n",
+    "    text = ''.join(char for char in text if not char.isdigit())\n",
+    "    # Remove punctuation\n",
+    "    for punctuation in string.punctuation:\n",
+    "        text = text.replace(punctuation, '') \n",
+    "    # Remove whitespace\n",
+    "    text = text.strip()\n",
+    "    \n",
+    "    # Tokenize \n",
+    "    token = word_tokenize(text)\n",
+    "    # Lemmatize\n",
+    "    text_cleaned = [WordNetLemmatizer().lemmatize(word) for word in token]\n",
+    "    return text_cleaned\n",
+    "\n",
+    "data['cleaned_reviews'] = data['reviews'].apply(preprocessing)\n",
+    "data['cleaned_reviews'] = data['cleaned_reviews'].apply(lambda x: ', '.join([str(i) for i in x]))"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -101,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "tags": [
      "challengify"
@@ -109,20 +223,143 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "from sklearn.preprocessing import LabelEncoder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "neg    1000\n",
+       "pos    1000\n",
+       "Name: target, dtype: int64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target = data['target']\n",
+    "target.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "encoder = LabelEncoder()\n",
+    "encoder.fit_transform(target)\n",
+    "data['target_encoded'] = encoder.fit_transform(target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target</th>\n",
+       "      <th>reviews</th>\n",
+       "      <th>cleaned_reviews</th>\n",
+       "      <th>target_encoded</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>neg</td>\n",
+       "      <td>plot : two teen couples go to a church party ,...</td>\n",
+       "      <td>plot, two, teen, couple, go, to, a, church, pa...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>neg</td>\n",
+       "      <td>the happy bastard's quick movie review \\ndamn ...</td>\n",
+       "      <td>the, happy, bastard, quick, movie, review, dam...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>neg</td>\n",
+       "      <td>it is movies like these that make a jaded movi...</td>\n",
+       "      <td>it, is, movie, like, these, that, make, a, jad...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>neg</td>\n",
+       "      <td>\" quest for camelot \" is warner bros . ' firs...</td>\n",
+       "      <td>quest, for, camelot, is, warner, bros, first, ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>neg</td>\n",
+       "      <td>synopsis : a mentally unstable man undergoing ...</td>\n",
+       "      <td>synopsis, a, mentally, unstable, man, undergoi...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  target                                            reviews  \\\n",
+       "0    neg  plot : two teen couples go to a church party ,...   \n",
+       "1    neg  the happy bastard's quick movie review \\ndamn ...   \n",
+       "2    neg  it is movies like these that make a jaded movi...   \n",
+       "3    neg   \" quest for camelot \" is warner bros . ' firs...   \n",
+       "4    neg  synopsis : a mentally unstable man undergoing ...   \n",
+       "\n",
+       "                                     cleaned_reviews  target_encoded  \n",
+       "0  plot, two, teen, couple, go, to, a, church, pa...               0  \n",
+       "1  the, happy, bastard, quick, movie, review, dam...               0  \n",
+       "2  it, is, movie, like, these, that, make, a, jad...               0  \n",
+       "3  quest, for, camelot, is, warner, bros, first, ...               0  \n",
+       "4  synopsis, a, mentally, unstable, man, undergoi...               0  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Quick check\n",
     "data.head()"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -130,6 +367,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -140,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "tags": [
      "challengify"
@@ -148,10 +386,45 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "count_vectorizer = CountVectorizer()\n",
+    "X = count_vectorizer.fit_transform(data['cleaned_reviews'])\n",
+    "X_array = X.toarray()"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8160000000000001"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Feature/Target\n",
+    "X = X_array\n",
+    "y = data[\"target_encoded\"]\n",
+    "\n",
+    "# Naive Bayes\n",
+    "pipeline_naive_bayes = make_pipeline(\n",
+    "    MultinomialNB()\n",
+    ")\n",
+    "\n",
+    "# Cross-validation\n",
+    "cv_results = cross_validate(pipeline_naive_bayes, X, y, cv = 5)\n",
+    "accuracy = cv_results['test_score'].mean()\n",
+    "accuracy"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -159,6 +432,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -168,6 +442,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -178,14 +453,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.84"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vectorizer = CountVectorizer(ngram_range = (2,2))\n",
     "naivebayes = MultinomialNB()\n",
     "\n",
-    "X_bow = vectorizer.fit_transform(data.clean_reviews)\n",
+    "X_bow = vectorizer.fit_transform(data.cleaned_reviews)\n",
     "\n",
     "cv_nb = cross_validate(\n",
     "    naivebayes,\n",
@@ -198,6 +484,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -214,6 +501,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
